# dev-handbook

./: .codespellignore  .gitignore  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
cloud/: aws-basics.md  azure-overview.md  gcp-notes.md
devops/: ci-cd-basics.md  docker-cheatsheet.md  kubernetes-notes.md
git/: branching-strategies.md  common-mistakes.md  git-cheatsheet.md
programming/: code-review-checklist.md  design-patterns.md  javascript.md  python.md
programming/python/: pyproject.toml
programming/python/src/dev_handbook_python/: hello.py
programming/python/tests/: test_hello.py
resources/: blogs.md  books.md  tools.md
software-practices/: agile-scrum.md  architecture-principles.md  clean-code.md  testing-strategies.md
