[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dev-handbook-python"
version = "0.0.1"
description = "Minimal Python example for Dev Handbook"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Use src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/dev_handbook_python"]
